# anno_1

./: CMakeLists.txt  README.md
CNN/script/: build.sh  demo_lenet.sh  demo_vgg.sh
CNN/src/: CMakeLists.txt  circuit.cpp  circuit.h  global_var.hpp  models.cpp  models.hpp  neuralNetwork.cpp
LLM/: CMakeLists.txt  README.md  build.sh  llm.sh
LLM/src/: CMakeLists.txt  circuit.cpp  circuit.h  global_var.hpp  hyrax.cpp  hyrax.hpp  hyrax_rp.cpp  hyrax_rp.hpp  hyrax_util.hpp  main_demo_llm.cpp  models.cpp  models.hpp  neuralNetwork.cpp  neuralNetwork.hpp  polynomial.cpp  polynomial.h  prover.cpp  prover.hpp  range_prover.cpp  range_prover.hpp  utils.cpp  utils.hpp  verifier.cpp  verifier.hpp
output/: readme.md
simulate/: GKR_gates_phase1_model.py  GKR_gates_phase2_model.py  GKR_last_model.py  GKR_model_wrap.py  area_latency_breakdown.py  break_lasso_mult_arr.py  build_eq_helpers.py  collect_result.py  commit_open_latency_helpers.py  compile_gate_range.py  compile_statistic.py  compile_statistic_speedup.py  gate_u_g_relation.py  gate_u_g_relation_plot.py  logup_model.py  matmul_model.py  model_sweep.py  pareto_plot.py  software_baseline_latency.py  speedup_capture_SRAM.py  speedup_modmul_num.py  speedup_on_steps.py  temp.py
simulate/hardware_experiments/: fourstep_ntt_perf_models.py  fourstep_ntt_perf_models_no.py  get_plots.sh  helper_funcs.py  ntt.py  ntt_func_sim.py  ntt_utility.py  params.py  params_ntt_v_sum.py  plot_funcs.py  poly_analyzer.py  poly_list.py  quick_test.sh  run_sweep.sh  sram_budget_plot.py  sumcheck_NTT_sweep.py  sumcheck_iso_hw_comparison_new.py  (+8 more)
(+34 files in other folders)
